# airgap-formatter

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  sw.js
.github/workflows/: ci.yml  deploy.yml
development/: airgap_formatter.js  sw.js
development/pkg/: airgap_json_formatter.d.ts  airgap_json_formatter.js  airgap_json_formatter_bg.wasm  airgap_json_formatter_bg.wasm.d.ts
docs/: ASYNCIFY-CONFLICT-REPORT.md  architecture.md  jspi-status.md  prd.md  test-checklist.md
docs/adr/: 001-async-serialisation.md
docs/qa/assessments/: 10.8-nfr-20260128.md  10.8-test-design-20260128.md  5.1-nfr-20260126.md  5.1-risk-20260126.md  5.1-test-design-20260126.md  5.2-nfr-20260126.md  5.2-risk-20260126.md  5.2-test-design-20260126.md  5.3-nfr-20260126.md  5.3-risk-20260126.md  5.3-test-design-20260126.md  5.4-nfr-20260126.md  5.4-risk-20260126.md  5.4-test-design-20260126.md
docs/qa/gates/: 10.8-markdown-integration-testing.yml  5.1-async-serialiser-implementation.yml  5.2-refactor-async-operations.yml  5.3-remove-timer-workarounds.yml  5.4-jspi-future-proofing.yml
docs/qa/test-plans/: 5.3-asyncify-fix-validation.md
docs/qa/test-reports/: 10.8-integration-test-report.md
docs/stories/: 1.1.project-setup-build-pipeline.md  1.2.core-json-formatting-module.md  1.3.json-validation-statistics-module.md  1.4.wasm-bindings-javascript-interface.md  10.0.markdown-mermaid-support-epic.md  10.1.rust-markdown-renderer.md  10.2.mermaid-js-integration.md  10.3.bridge-layer-markdown-methods.md  10.4.format-auto-detection-extension.md  10.5.markdown-preview-pane.md  10.6.markdown-syntax-highlighting.md  10.7.theme-extension-markdown.md  10.8.markdown-integration-testing.md  11.0.responsive-mobile-friendly-ui.md  2.1.qt-wasm-project-setup-integration.md  2.2.main-editor-ui-layout.md  2.3.toolbar-and-actions.md  2.4.validation-feedback-error-display.md  2.5.privacy-indicators-trust-ui.md  2.6.service-worker-offline-support.md  2.7.github-pages-deployment.md  2.8.cross-browser-testing-polish.md  3.1.qjson-tree-model.md  3.2.json-treeview-qml.md  3.3.copy-controls-toggle.md  3.4.treeview-hover-stability-fix.md  3.5.treeview-closing-brackets.md  4.1.auto-format-expand-all.md  5.0.asyncify-conflict-resolution-epic.md  5.1.async-serialiser-implementation.md  5.2.refactor-async-operations.md  5.3.remove-timer-workarounds.md  5.4.jspi-future-proofing.md  6.1.pwa-install-prompt-support.md  8.0.xml-formatting-support-epic.md  8.1.productionize-xml-formatter.md  8.2.productionize-xml-highlighter.md  8.3.bridge-layer-xml-methods.md  8.4.format-auto-detection.md  8.5.toolbar-format-selector.md  (+3 more)
pkg/: airgap_json_formatter_bg.wasm
public/: bridge.js  index.html  jspi-detect.js  manifest.json  sw.js
qt/: CMakeLists.txt  asyncserialiser.cpp  asyncserialiser.h  jsonbridge.cpp  jsonbridge.h  main.cpp  qjsontreeitem.cpp  qjsontreeitem.h  qjsontreemodel.cpp  qjsontreemodel.h  theme.h
qt/qml/: Header.qml  HistoryPanel.qml  InputPane.qml  JsonTreeView.qml  Main.qml  OutputPane.qml  StatusBar.qml  Theme.qml  Toolbar.qml  qmldir
qt/tests/: CMakeLists.txt  tst_asyncserialiser.cpp  tst_jsonbridge_async.cpp
qt/tests/integration/: tst_markdown_integration.cpp
scripts/: build-qt.sh  build-rust.sh  build.sh
src/: formatter.rs  highlighter.rs  lib.rs  types.rs  validator.rs
src/tests/: formatter_tests.rs  mod.rs  validator_tests.rs
test-data/: large-document-500kb.md  markdown-comprehensive.md  markdown-edge-cases.md  markdown-xss-payloads.md  mermaid-all-types.md  regression-json.json  regression-xml.xml  test-report-template.md
tests/: integration_tests_10.8.html  wasm_tests.rs
